# boilerworks-cherrypy-micro

./: .build-complete  .env.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  bootstrap.md  docker-compose.yml  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  models.py  seed.py  tools.py
app/api/: api_keys.py  events.py  health.py
migrations/versions/: 001_init.py
tests/: conftest.py  test_api_keys.py  test_auth.py  test_events.py  test_health.py
